--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -4,14 +4,16 @@
 .root {
   position: relative;
   z-index: 100;
+  background: #00f;
 }
 
 .wrapper {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 960px;
+  max-width: 1044px;
   padding: 1em;
   display: flex;
+  
 
   @media (--media-min-small) {
     padding: 1.5em 1.5em;
@@ -19,13 +21,13 @@
 }
 
 .branding {
-  font-weight: 600;
+  font-weight: 800;
   flex: 1;
 
   @nest & a {
     display: inline-block;
     padding: 0.5em;
-    color: inherit;
+    color: #fff;
     text-decoration: none;
 
     @media (hover: hover) {
@@ -66,7 +68,7 @@
 
   @nest & ul li a {
     display: block;
-    color: inherit;
+    color: #fff;
     text-decoration: none;
   }
 
